Fix description text align

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1035,7 +1035,7 @@ td .fas{
   }
 
   .send__description{
-    text-align: justify;
+    text-align: left;
   }
 
 
